tools/tests/errors/surf_lib_12.ki
# Decoding Bytes with an unknown encoding must raise.
var b = Bytes([104, 105])
discard b.decode("bogus-enc")
